...
    
    func saveCarModel() -> Bool{
        let text = modelTextField.text!.trimmingCharacters(in: .whitespaces)
        let regex = "^[a-zA-Z0-9\\s\\p{P}]{3,}$"
        let predicate = NSPredicate(format: "SELF MATCHES %@", regex)
        if !predicate.evaluate(with: text) {
            let alert = UIAlertController(title: "Error", message: "Model must be at least 3 characters long and contain only spaces, letters, numbers and punctoation.", preferredStyle: .alert)
            
            alert.addAction(.init(title: "OK", style: .default, handler: { [unowned self] _ in
                self.modelTextField.becomeFirstResponder()
            }))
            present(alert, animated: true)
            return false
        }
        return true
...
